# AITH_ML-project

./: .gitignore  Dockerfile  Makefile  README.md  billing.db  docker-compose.yml  main.py  pyproject.toml  setup.cfg
billing/: main.py
billing/apps/broker/: tasks.py  worker.py
billing/apps/config/: settings.py
billing/apps/db/: database.py  models.py  schemas.py
billing/apps/handlers/: auth.py  logger.py  model.py  routers.py  user_controller.py
billing/apps/ml/: utils.py
config/: settings.py
core/entities/: billing.py  user.py
core/repositories/: billing_repository.py
core/use_cases/: billing_use_cases.py  user_use_cases.py
frontend/: Dockerfile  app.py  requirements.txt
infra/db/: billing_repository_impl.py  database.py  mappers.py  models.py  user_repository_impl.py
infra/message_broker/: connection.py  consumer.py  producer.py  schemas.py
infra/web/controllers/: billing_controller.py  user_controller.py
infra/web/dependencies/: billing_dependencies.py  user_dependencies.py
monitoring/grafana/: dashboard.json  grafana.ini
monitoring/prometheus/: prometheus.yml
